--- a/forecast_model/forecast_model.ipynb
+++ b/forecast_model/forecast_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,6 +24,214 @@
    ],
    "source": [
     "%pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_accountdim = pd.read_csv(\"/Users/hetapatel/Datathon 3-28-25/consumer_spending_ml/forecast_data/account_dim_20250325.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>current_account_nbr</th>\n",
+       "      <th>client_id</th>\n",
+       "      <th>open_date</th>\n",
+       "      <th>card_activation_date</th>\n",
+       "      <th>card_activation_flag</th>\n",
+       "      <th>ebill_ind</th>\n",
+       "      <th>date_in_collection</th>\n",
+       "      <th>overlimit_type_flag</th>\n",
+       "      <th>payment_hist_1_12_mths</th>\n",
+       "      <th>payment_hist_13_24_mths</th>\n",
+       "      <th>employee_code</th>\n",
+       "      <th>external_status_reason_code</th>\n",
+       "      <th>special_finance_charge_ind</th>\n",
+       "      <th>pscc_ind</th>\n",
+       "      <th>ext_status_reason_cd_desc</th>\n",
+       "      <th>account_card_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>nTgalbpd5Rsol7CA</td>\n",
+       "      <td>YCTHAA278DC</td>\n",
+       "      <td>2020-07-17T00:00:00.000-04:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>E</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ZZZZZZIAZZZZ</td>\n",
+       "      <td>ZZZZIIIQIIII</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DUAL CARD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>xYaLrD9IvmbVl1PB</td>\n",
+       "      <td>CCSP489PLCC</td>\n",
+       "      <td>2024-07-24T00:00:00.000-04:00</td>\n",
+       "      <td>2024-08-09T00:00:00.000-04:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>E</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IQIIIQIA</td>\n",
+       "      <td>\\\\\\\\\\\\\"\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DUAL CARD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>JM78WNziiRWgmL8e</td>\n",
+       "      <td>HGBHARRFT984</td>\n",
+       "      <td>2024-05-05T00:00:00.000-04:00</td>\n",
+       "      <td>2024-05-05T00:00:00.000-04:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\\\\\\\\\\\\\"\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IIIQIQIIIIA</td>\n",
+       "      <td>\\\\\\\\\\\\\"\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PLCC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bv4NLVhWTGCf8KgC</td>\n",
+       "      <td>OSELW263</td>\n",
+       "      <td>2024-07-28T00:00:00.000-04:00</td>\n",
+       "      <td>2024-09-08T00:00:00.000-04:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\\\\\\\\\\\\\"\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>I1III1A</td>\n",
+       "      <td>\\\\\\\\\\\\\"\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PLCC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>nrXceQabYIHo31lp</td>\n",
+       "      <td>HGBHARRFT984</td>\n",
+       "      <td>2024-09-15T00:00:00.000-04:00</td>\n",
+       "      <td>2024-09-15T00:00:00.000-04:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\\\\\\\\\\\\\"\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\\\\\\\\\\\\\"\"</td>\n",
+       "      <td>\\\\\\\\\\\\\"\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PLCC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  current_account_nbr     client_id                      open_date  \\\n",
+       "0    nTgalbpd5Rsol7CA   YCTHAA278DC  2020-07-17T00:00:00.000-04:00   \n",
+       "1    xYaLrD9IvmbVl1PB   CCSP489PLCC  2024-07-24T00:00:00.000-04:00   \n",
+       "2    JM78WNziiRWgmL8e  HGBHARRFT984  2024-05-05T00:00:00.000-04:00   \n",
+       "3    bv4NLVhWTGCf8KgC      OSELW263  2024-07-28T00:00:00.000-04:00   \n",
+       "4    nrXceQabYIHo31lp  HGBHARRFT984  2024-09-15T00:00:00.000-04:00   \n",
+       "\n",
+       "            card_activation_date card_activation_flag ebill_ind  \\\n",
+       "0                            NaN                    8         E   \n",
+       "1  2024-08-09T00:00:00.000-04:00                    0         E   \n",
+       "2  2024-05-05T00:00:00.000-04:00                    0  \\\\\\\\\\\\\"\"   \n",
+       "3  2024-09-08T00:00:00.000-04:00                    0  \\\\\\\\\\\\\"\"   \n",
+       "4  2024-09-15T00:00:00.000-04:00                    0  \\\\\\\\\\\\\"\"   \n",
+       "\n",
+       "   date_in_collection  overlimit_type_flag payment_hist_1_12_mths  \\\n",
+       "0                 NaN                    0           ZZZZZZIAZZZZ   \n",
+       "1                 NaN                    0               IQIIIQIA   \n",
+       "2                 NaN                    0            IIIQIQIIIIA   \n",
+       "3                 NaN                    0                I1III1A   \n",
+       "4                 NaN                    0               \\\\\\\\\\\\\"\"   \n",
+       "\n",
+       "  payment_hist_13_24_mths employee_code  external_status_reason_code  \\\n",
+       "0            ZZZZIIIQIIII           NaN                            0   \n",
+       "1                \\\\\\\\\\\\\"\"           NaN                            0   \n",
+       "2                \\\\\\\\\\\\\"\"           NaN                            0   \n",
+       "3                \\\\\\\\\\\\\"\"           NaN                            0   \n",
+       "4                \\\\\\\\\\\\\"\"           NaN                            0   \n",
+       "\n",
+       "   special_finance_charge_ind  pscc_ind ext_status_reason_cd_desc  \\\n",
+       "0                         NaN         0                       NaN   \n",
+       "1                         NaN         1                       NaN   \n",
+       "2                         NaN         0                       NaN   \n",
+       "3                         NaN         0                       NaN   \n",
+       "4                         NaN         0                       NaN   \n",
+       "\n",
+       "  account_card_type  \n",
+       "0         DUAL CARD  \n",
+       "1         DUAL CARD  \n",
+       "2              PLCC  \n",
+       "3              PLCC  \n",
+       "4              PLCC  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_accountdim.head()"
    ]
   },
   {
