updates to model

--- a/forecast_model/model.ipynb
+++ b/forecast_model/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "4       2024-08-17    eJSfTCGPvJulGzd3            26.65             SALE"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -233,12 +233,12 @@
       "0 | loss         | MAE           | 0      | train\n",
       "1 | padder_train | ConstantPad1d | 0      | train\n",
       "2 | scaler       | TemporalNorm  | 0      | train\n",
-      "3 | blocks       | ModuleList    | 3.2 M  | train\n",
+      "3 | blocks       | ModuleList    | 3.4 M  | train\n",
       "-------------------------------------------------------\n",
-      "3.2 M     Trainable params\n",
-      "67.5 K    Non-trainable params\n",
-      "3.2 M     Total params\n",
-      "12.917    Total estimated model params size (MB)\n",
+      "3.4 M     Trainable params\n",
+      "84.5 K    Non-trainable params\n",
+      "3.4 M     Total params\n",
+      "13.740    Total estimated model params size (MB)\n",
       "31        Modules in train mode\n",
       "0         Modules in eval mode\n"
      ]
@@ -247,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2:  64%|██████▍   | 242/379 [00:06<00:03, 39.73it/s, v_num=20, train_loss_step=56.80, train_loss_epoch=67.10]"
+      "Epoch 2:  64%|██████▍   | 242/379 [00:06<00:03, 39.17it/s, v_num=32, train_loss_step=58.70, train_loss_epoch=65.50]"
      ]
     },
     {
@@ -261,7 +261,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2:  64%|██████▍   | 242/379 [00:06<00:03, 39.72it/s, v_num=20, train_loss_step=56.80, train_loss_epoch=67.10]\n"
+      "Epoch 2:  64%|██████▍   | 242/379 [00:06<00:03, 39.16it/s, v_num=32, train_loss_step=58.70, train_loss_epoch=65.50]\n"
      ]
     },
     {
@@ -277,37 +277,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting DataLoader 0: 100%|██████████| 379/379 [00:02<00:00, 165.04it/s]\n",
+      "Predicting DataLoader 0: 100%|██████████| 379/379 [00:01<00:00, 281.03it/s]\n",
       "Forecast shape: (1112924, 3)\n",
       "\n",
       "First few predictions:\n",
-      "          unique_id         ds     NBEATS\n",
-      "0  00gwujJkd597VxLd 2025-03-21  17.373260\n",
-      "1  00gwujJkd597VxLd 2025-03-22  15.281523\n",
-      "2  00gwujJkd597VxLd 2025-03-23  14.663605\n",
-      "3  00gwujJkd597VxLd 2025-03-24  14.096784\n",
-      "4  00gwujJkd597VxLd 2025-03-25  13.465441\n",
+      "          unique_id         ds    NBEATSx\n",
+      "0  00gwujJkd597VxLd 2025-03-21  27.825865\n",
+      "1  00gwujJkd597VxLd 2025-03-22  27.807743\n",
+      "2  00gwujJkd597VxLd 2025-03-23  27.149782\n",
+      "3  00gwujJkd597VxLd 2025-03-24  27.537836\n",
+      "4  00gwujJkd597VxLd 2025-03-25  26.481491\n",
       "\n",
       "Predicted Q4 spending by account:\n",
       "unique_id\n",
-      "00gwujJkd597VxLd     1440.707275\n",
-      "00iP5U82D8XwVQ9G      161.376434\n",
-      "00oyr3QppAzjLws4     6063.237305\n",
-      "02WRVV8yusgcZWLW    14265.537109\n",
-      "033o9yHYen3xoz6k     3983.733398\n",
+      "00gwujJkd597VxLd     2694.118408\n",
+      "00iP5U82D8XwVQ9G      465.240479\n",
+      "00oyr3QppAzjLws4     6151.034180\n",
+      "02WRVV8yusgcZWLW    12478.448242\n",
+      "033o9yHYen3xoz6k     3979.056641\n",
       "                        ...     \n",
-      "zyZhjzJwhpOgSvmc     2615.703857\n",
-      "zz3nbtZXS41NZk0h     3912.802734\n",
-      "zzBy2qNM78aRV580     2023.585815\n",
-      "zzEuUBBmvGiVnabb     8992.721680\n",
-      "zzR9PvG7dY9u5iHU    14039.809570\n",
-      "Name: NBEATS, Length: 12097, dtype: float32\n"
+      "zyZhjzJwhpOgSvmc     2541.898682\n",
+      "zz3nbtZXS41NZk0h     3776.042236\n",
+      "zzBy2qNM78aRV580     3160.462891\n",
+      "zzEuUBBmvGiVnabb     9529.258789\n",
+      "zzR9PvG7dY9u5iHU    13486.830078\n",
+      "Name: NBEATSx, Length: 12097, dtype: float32\n"
      ]
     }
    ],
    "source": [
     "from neuralforecast import NeuralForecast\n",
-    "from neuralforecast.models import NBEATS, NHITS\n",
+    "from neuralforecast.models import NBEATSx, NHITS\n",
     "\n",
     "# Prepare data in the required format\n",
     "df_forecast = df_transaction_filtered.groupby(['current_account_nbr', 'transaction_date'])['transaction_amt'].sum().reset_index()\n",
@@ -324,7 +324,7 @@
     "\n",
     "# Initialize model - predict 92 days (Q4)\n",
     "model = NeuralForecast(\n",
-    "    models=[NBEATS(input_size=273, h=92)],  # Look back 6 months, predict ~3 months (Q4)\n",
+    "    models=[NBEATSx(input_size=365, h=92, start_padding_enabled=True)],  # Look back 15 months, predict ~3 months (Q4)\n",
     "    freq='D'\n",
     ")\n",
     "\n",
@@ -336,74 +336,86 @@
     "print(forecast.head())\n",
     "\n",
     "# To get total Q4 spending per account\n",
-    "q4_spending = forecast.groupby('unique_id')['NBEATS'].sum()\n",
+    "q4_spending = forecast.groupby('unique_id')['NBEATSx'].sum()\n",
     "print(\"\\nPredicted Q4 spending by account:\")\n",
     "print(q4_spending)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First few rows with quarterly spending and Q4 predictions:\n",
-      "  current_account_nbr  q1_spending  q2_spending  q3_spending       4  \\\n",
-      "0    nTgalbpd5Rsol7CA       557.29         0.00        95.00    0.00   \n",
-      "1    xYaLrD9IvmbVl1PB        94.16         0.00      1318.90  788.88   \n",
-      "2    JM78WNziiRWgmL8e         0.00       617.15       311.20  784.30   \n",
-      "3    bv4NLVhWTGCf8KgC         0.00         0.00       182.65    0.00   \n",
-      "4    nrXceQabYIHo31lp         0.00         0.00         0.00    0.00   \n",
+      "First few rows with quarterly spending and Q4 2025 predictions:\n",
+      "  current_account_nbr  q1_2024_spending  q2_2024_spending  q3_2024_spending  \\\n",
+      "0    nTgalbpd5Rsol7CA               0.0              0.00             95.00   \n",
+      "1    xYaLrD9IvmbVl1PB               0.0              0.00           1318.90   \n",
+      "2    JM78WNziiRWgmL8e               0.0            617.15            311.20   \n",
+      "3    bv4NLVhWTGCf8KgC               0.0              0.00            182.65   \n",
+      "4    nrXceQabYIHo31lp               0.0              0.00              0.00   \n",
       "\n",
-      "   predicted_q4_spending  \n",
-      "0           16645.345703  \n",
-      "1           25825.529297  \n",
-      "2            4420.987305  \n",
-      "3             164.490463  \n",
-      "4               0.000000  \n"
+      "   q4_2024_spending  q1_2025_spending  predicted_q4_2025_spending  \n",
+      "0              0.00            557.29                12461.628906  \n",
+      "1            788.88             94.16                25715.671875  \n",
+      "2            784.30              0.00                 4120.576660  \n",
+      "3              0.00              0.00                  576.967896  \n",
+      "4              0.00              0.00                    0.000000  \n"
      ]
     }
    ],
    "source": [
     "# Define columns we want to keep\n",
     "feature_columns_account = ['current_account_nbr']\n",
-    "\n",
-    "# Filter account dimension data\n",
     "df_accountdim_filtered = df_accountdim[feature_columns_account]\n",
     "\n",
-    "# Get Q4 predictions and quarterly spending (same as before)\n",
-    "q4_predictions = forecast.groupby('unique_id')['NBEATS'].sum().reset_index()\n",
-    "q4_predictions = q4_predictions.rename(columns={'NBEATS': 'predicted_q4_spending'})\n",
-    "\n",
-    "# Calculate actual spending for Q1-Q3\n",
+    "# Add year and quarter columns\n",
     "df_transaction_filtered['transaction_date'] = pd.to_datetime(df_transaction_filtered['transaction_date'])\n",
+    "df_transaction_filtered['year'] = df_transaction_filtered['transaction_date'].dt.year\n",
     "df_transaction_filtered['quarter'] = df_transaction_filtered['transaction_date'].dt.quarter\n",
     "\n",
-    "# Sum spending by account and quarter\n",
-    "quarterly_spending = df_transaction_filtered.groupby(['current_account_nbr', 'quarter'])['transaction_amt'].sum().reset_index()\n",
+    "# Calculate spending by year and quarter\n",
+    "quarterly_spending = df_transaction_filtered.groupby(\n",
+    "    ['current_account_nbr', 'year', 'quarter']\n",
+    ")['transaction_amt'].sum().reset_index()\n",
     "\n",
-    "# Pivot to create columns for each quarter\n",
-    "quarterly_spending_wide = quarterly_spending.pivot(\n",
+    "# Create separate dataframes for 2024 and 2025\n",
+    "spending_2024 = quarterly_spending[quarterly_spending['year'] == 2024].copy()\n",
+    "spending_2025 = quarterly_spending[quarterly_spending['year'] == 2025].copy()\n",
+    "\n",
+    "# Pivot 2024 data\n",
+    "spending_2024_wide = spending_2024.pivot(\n",
     "    index='current_account_nbr',\n",
     "    columns='quarter',\n",
     "    values='transaction_amt'\n",
     ").reset_index()\n",
-    "\n",
-    "# Rename columns\n",
-    "quarterly_spending_wide = quarterly_spending_wide.rename(columns={\n",
-    "    1: 'q1_spending',\n",
-    "    2: 'q2_spending',\n",
-    "    3: 'q3_spending'\n",
+    "spending_2024_wide = spending_2024_wide.rename(columns={\n",
+    "    1: 'q1_2024_spending',\n",
+    "    2: 'q2_2024_spending',\n",
+    "    3: 'q3_2024_spending',\n",
+    "    4: 'q4_2024_spending'\n",
     "})\n",
+    "\n",
+    "# Get Q1 2025 data\n",
+    "spending_2025_q1 = spending_2025[spending_2025['quarter'] == 1].copy()\n",
+    "spending_2025_q1 = spending_2025_q1[['current_account_nbr', 'transaction_amt']]\n",
+    "spending_2025_q1 = spending_2025_q1.rename(columns={'transaction_amt': 'q1_2025_spending'})\n",
+    "\n",
+    "# Get Q4 2025 predictions\n",
+    "q4_predictions = forecast.groupby('unique_id')['NBEATSx'].sum().reset_index()\n",
+    "q4_predictions = q4_predictions.rename(columns={'NBEATSx': 'predicted_q4_2025_spending'})\n",
     "\n",
     "# Merge everything together\n",
     "final_df = df_accountdim_filtered.merge(\n",
-    "    quarterly_spending_wide,\n",
-    "    left_on='current_account_nbr',\n",
-    "    right_on='current_account_nbr',\n",
+    "    spending_2024_wide,\n",
+    "    on='current_account_nbr',\n",
+    "    how='left'\n",
+    ").merge(\n",
+    "    spending_2025_q1,\n",
+    "    on='current_account_nbr',\n",
     "    how='left'\n",
     ").merge(\n",
     "    q4_predictions,\n",
@@ -412,37 +424,40 @@
     "    how='left'\n",
     ")\n",
     "\n",
-    "# Drop redundant column and fill NaN with 0\n",
+    "# Clean up\n",
     "final_df = final_df.drop('unique_id', axis=1, errors='ignore')\n",
     "final_df = final_df.fillna(0)\n",
     "\n",
-    "print(\"First few rows with quarterly spending and Q4 predictions:\")\n",
+    "# Save to CSV\n",
+    "final_df.to_csv('quarterly_spending_predictions.csv', index=False)\n",
+    "\n",
+    "print(\"First few rows with quarterly spending and Q4 2025 predictions:\")\n",
     "print(final_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Q4 spending for account X7jfKh6xrPAB8Tx6: $3983.81\n",
+      "Predicted Q4 spending for account nTgalbpd5Rsol7CA: $12461.63\n",
       "Available account IDs:\n",
       "unique_id\n",
-      "00gwujJkd597VxLd     1440.707275\n",
-      "00iP5U82D8XwVQ9G      161.376434\n",
-      "00oyr3QppAzjLws4     6063.237305\n",
-      "02WRVV8yusgcZWLW    14265.537109\n",
-      "033o9yHYen3xoz6k     3983.733398\n",
-      "Name: NBEATS, dtype: float32\n"
+      "00gwujJkd597VxLd     2694.118408\n",
+      "00iP5U82D8XwVQ9G      465.240479\n",
+      "00oyr3QppAzjLws4     6151.034180\n",
+      "02WRVV8yusgcZWLW    12478.448242\n",
+      "033o9yHYen3xoz6k     3979.056641\n",
+      "Name: NBEATSx, dtype: float32\n"
      ]
     }
    ],
    "source": [
-    "account_id = 'X7jfKh6xrPAB8Tx6'\n",
+    "account_id = 'nTgalbpd5Rsol7CA'\n",
     "if account_id in q4_spending:\n",
     "    print(f\"Predicted Q4 spending for account {account_id}: ${q4_spending[account_id]:.2f}\")\n",
     "else:\n",
@@ -451,6 +466,13 @@
     "print(\"Available account IDs:\")\n",
     "print(q4_spending.head())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
