changes to model

--- a/classification_model/model.ipynb
+++ b/classification_model/model.ipynb
@@ -192,12 +192,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "rams_batch_cur = rams_batch_cur[['cu_account_nbr', 'cu_bhv_scr', 'cu_crd_bureau_scr', 'ca_avg_utilz_lst_6_mnths', 'mo_tot_sales_array_1', 'mo_tot_sales_array_2', 'mo_tot_sales_array_3', 'mo_tot_sales_array_4', 'mo_tot_sales_array_5', 'mo_tot_sales_array_6', 'cu_cash_line_am', 'cu_crd_line', 'cu_otb', 'cu_nbr_days_dlq', 'ca_max_dlq_lst_6_mnths', 'ca_nsf_count_lst_12_months', 'cu_cur_nbr_due']]\n",
-    "#rams_batch_cur['mo_scaler'] = rams_batch_cur['mo_tot_sales_array_6'] / ((rams_batch_cur['mo_tot_sales_array_1'] + rams_batch_cur['mo_tot_sales_array_2'] + rams_batch_cur['mo_tot_sales_array_3'] + rams_batch_cur['mo_tot_sales_array_4'] + rams_batch_cur['mo_tot_sales_array_5']) / 5)\n",
     "rams_batch_cur.drop(columns=['mo_tot_sales_array_1', 'mo_tot_sales_array_2', 'mo_tot_sales_array_3', 'mo_tot_sales_array_4', 'mo_tot_sales_array_5', 'mo_tot_sales_array_6'], inplace=True)\n",
     "account_dim = account_dim[['current_account_nbr', 'payment_hist_1_12_mths', 'payment_hist_13_24_mths', 'overlimit_type_flag', 'external_status_reason_code']]\n",
     "statement_fact = statement_fact[['current_account_nbr', 'return_check_cnt_total']]\n",
@@ -1126,14 +1125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import RobustScaler\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import silhouette_score\n",
-    "from sklearn.impute import KNNImputer"
+    "from sklearn.metrics import silhouette_score"
    ]
   },
   {
